istio/manifests/namespaces/istio-system/Istio/istio-ingressgateway-internal-virtualservice.yaml
# Source: Istio/templates/internal-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-ingressgateway-internal
  namespace: istio-system
spec:
  hosts:
    - prometheus.lukeaddison.co.uk
    - alertmanager.lukeaddison.co.uk
    - grafana.lukeaddison.co.uk
    - jackett.lukeaddison.co.uk
    - wiki.lukeaddison.co.uk
    - lazylibrarian.lukeaddison.co.uk
    - kiali.lukeaddison.co.uk
    - radarr.lukeaddison.co.uk
    - sonarr.lukeaddison.co.uk
    - lidarr.lukeaddison.co.uk
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - port: 8443
      route:
        - destination:
            host: istio-ingressgateway-internal
            subset: prometheus
            port:
              number: 80
    - match:
        - port: 8443
      route:
        - destination:
            host: istio-ingressgateway-internal
            subset: alertmanager
            port:
              number: 80
    - match:
        - port: 8443
      route:
        - destination:
            host: istio-ingressgateway-internal
            subset: grafana
            port:
              number: 80
    - match:
        - port: 8443
      route:
        - destination:
            host: istio-ingressgateway-internal
            subset: jackett
            port:
              number: 80
    - match:
        - port: 8443
      route:
        - destination:
            host: istio-ingressgateway-internal
            subset: bookstack
            port:
              number: 80
    - match:
        - port: 8443
      route:
        - destination:
            host: istio-ingressgateway-internal
            subset: lazylibrarian
            port:
              number: 80
    - match:
        - port: 8443
      route:
        - destination:
            host: istio-ingressgateway-internal
            subset: kiali
            port:
              number: 80
    - match:
        - port: 8443
      route:
        - destination:
            host: istio-ingressgateway-internal
            subset: radarr
            port:
              number: 80
    - match:
        - port: 8443
      route:
        - destination:
            host: istio-ingressgateway-internal
            subset: sonarr
            port:
              number: 80
    - match:
        - port: 8443
      route:
        - destination:
            host: istio-ingressgateway-internal
            subset: lidarr
            port:
              number: 80
